<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yyox.mvp.ui.activity.UserRegisterActivity">

    <RelativeLayout
        android:id="@+id/navigationbar"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="#1B82D1">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/back"
            android:background="#00000000"
            android:onClick="btn_back_click"
            android:contentDescription=""/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_register"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textColor="#ffffff" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@drawable/preference_item"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="48sp"
                    android:layout_height="48sp"
                    android:text="@string/user_register_phone_prefix"
                    android:textColor="#999999"
                    android:gravity="center"
                    android:background="@drawable/textview_bg"
                    android:layout_alignParentLeft="true"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/et_register_phone"
                    android:layout_width="fill_parent"
                    android:layout_height="50sp"
                    android:background="@null"
                    android:hint="@string/user_register_phone_hint"
                    android:inputType="phone"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:textColor="#6c7883"
                    android:textColorHint="#cccccc"
                    android:textSize="16sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/preference_item"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/et_register_email"
                    android:layout_width="fill_parent"
                    android:layout_height="50sp"
                    android:background="@null"
                    android:hint="@string/user_register_email_hint"
                    android:paddingLeft="60dp"
                    android:paddingRight="5dp"
                    android:textColor="#6c7883"
                    android:textColorHint="#cccccc"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/preference_item"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/et_register_password"
                    android:layout_width="fill_parent"
                    android:layout_height="50sp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:hint="@string/user_register_password_hint"
                    android:paddingLeft="60dp"
                    android:paddingRight="5dp"
                    android:textColor="#6c7883"
                    android:textColorHint="#cccccc"
                    android:textSize="16sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50sp"
                android:background="@drawable/preference_item"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/et_register_code"
                    android:layout_width="0sp"
                    android:layout_height="50sp"
                    android:layout_weight="4"
                    android:background="@null"
                    android:hint="@string/user_register_verification_code_hint"
                    android:inputType="number"
                    android:paddingLeft="60dp"
                    android:paddingRight="5dp"
                    android:textColor="#6c7883"
                    android:textColorHint="#cccccc"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/authcode_btn"
                    android:layout_width="0sp"
                    android:layout_height="50sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="#1e81d1"
                    android:onClick="bt_authcode_click"
                    android:text="@string/user_register_send"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/login_prompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_register_describe"
                    android:textColor="#999999"
                    android:textSize="12sp"/>

                <Button
                    android:id="@+id/agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:text="@string/user_register_terms"
                    android:onClick="btn_agreement_click"
                    android:textColor="#1e81d1"
                    android:textStyle="bold"
                    android:textSize="12sp" />
            </LinearLayout>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp" >

            <Button
                android:id="@+id/btn_register"
                android:layout_width="fill_parent"
                android:layout_height="40sp"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="55dp"
                android:background="@drawable/btn_style"
                android:text="@string/user_register"
                android:onClick="bt_register_click"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
