<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yyox.mvp.ui.activity.UserLoginActivity">

    <RelativeLayout
        android:id="@+id/navigationbar"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="#1B82D1">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/back"
            android:background="#00000000"
            android:onClick="btn_back_click"
            android:contentDescription=""/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_login"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:onClick="btn_register_click"
            android:text="@string/user_register"/>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@drawable/preference_item"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="48sp"
                    android:layout_height="48sp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/user_login_account"
                    android:textColor="#999999"
                    android:gravity="center"
                    android:background="@drawable/textview_bg"
                    android:layout_alignParentLeft="true"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="fill_parent"
                    android:layout_height="50sp"
                    android:background="@null"
                    android:hint="@string/user_login_account_hint"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:textColor="#6c7883"
                    android:textColorHint="#cccccc"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@drawable/preference_item"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="48sp"
                    android:layout_height="48sp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/user_login_password"
                    android:textColor="#999999"
                    android:gravity="center"
                    android:background="@drawable/textview_bg"
                    android:layout_alignParentLeft="true"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="50sp"
                    android:background="@null"
                    android:hint="请输入登录密码"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:textColor="#6c7883"
                    android:textColorHint="#cccccc"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp" >

            <Button
                android:layout_width="fill_parent"
                android:layout_height="40sp"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="55dp"
                android:background="@drawable/btn_style"
                android:text="@string/user_login"
                android:onClick="btn_login_click"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="44dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:textColor="#666666"
                android:textSize="14sp"
                android:onClick="btn_forget_click"
                android:text="@string/user_login_password_forget"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>

