<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_address"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yyox.mvp.ui.activity.AddressActivity">

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/rl_activity_address_navigationbar"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="#1B82D1">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/back"
            android:background="#00000000"
            android:onClick="btn_back_click"
            android:contentDescription=""/>

        <TextView
            android:id="@+id/tv_activity_address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_address_list"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_address_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:onClick="btn_address_add_click"
            android:text="@string/common_new"/>

    </com.zhy.autolayout.AutoRelativeLayout>

    <LinearLayout
        android:layout_below="@+id/rl_activity_address_navigationbar"
        android:layout_above="@+id/rl_activity_address_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/AddressRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            tools:listitem="@layout/item_address_list"/>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/AddressSwipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_activity_address_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_activity_address_bottom"
            android:layout_width="fill_parent"
            android:layout_height="40sp"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_style"
            android:text="@string/common_next_step"
            android:onClick="btn_address_next_click"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>
